git-svn-id: http://subversion.assembla.com/svn/eplsvn/2011-2012@245 080cfd25-d5d9-4c59-82ea-70d02a200d8b

--- a/LINGI2365-Constraint_programming/Assignment3/report/document.tex
+++ b/LINGI2365-Constraint_programming/Assignment3/report/document.tex
@@ -86,9 +86,28 @@ Since the bound consistency guarantees the domain consistency for this constrain
 
 \subsection{AC2001 propagator} %4.5 pt
 
+\subsubsection{Generic constraint}
+
+\paragraph{Adding the first support data structure}
+
+\paragraph{Body of the constructor}
+
+\paragraph{Body of the post method}
+
+\paragraph{Body of the propagate method}
+
+\subsubsection{Specific constraints}
 
 \subsection{The AllDifferent constraint : AllDiffFC.co} %6 pt
 
+\subsubsection{Forward-checking consistency}
 
+\subsubsection{Propagator ensuring forward-checking consistency}
+
+\subsubsection{Modification of the NqueensFC.co to use our implementation of alldifferent.}
+
+\subsubsection{Test both implementations of alldifferent}
+
+\subsubsection{What did you nd in your comparative study?}
 
 \end{document}
